--- a/src/styles/components/_catalog-list.scss
+++ b/src/styles/components/_catalog-list.scss
@@ -5,7 +5,7 @@
   padding-inline: $space-0;
   display: grid;
   grid-template-rows: 1fr;
-  gap: $gap-base;
+  gap: 32px;
   margin-block: $space-0;
 
   @include tablet {
