--- a/src/styles/components/_catalog-tools.scss
+++ b/src/styles/components/_catalog-tools.scss
@@ -20,6 +20,10 @@
     justify-content: space-between;
     align-items: center;
     gap: $gap-sm;
+
+    @include tablet {
+      align-items: flex-start;
+    }
   }
 
   &__select-wrapper {
@@ -79,8 +83,8 @@
   }
 
   &__info {
-    margin-block: $space-sm;
     white-space: wrap;
+    margin-block: 0;
   }
 
   &__filter {
@@ -97,6 +101,6 @@
     display: flex;
     gap: $gap-lg;
     justify-content: space-between;
-    align-items: center;
+    align-items: baseline;
   }
 }
